--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "preinstall": "echo --- preinstall --- && (cd client && npm install) && (cd server && npm install)",
-    "prestart": "echo --- prestart --- && (cd client && npm run build)",
-    "start": "echo --- start --- && (cd server && npm start)",
+    "preinstall": "echo --- preinstall --- && cd client && npm install && cd .. && cd server && npm install && cd ..",
+    "prestart": "echo --- prestart --- && cd client && npm run build && cd ..",
+    "start": "echo --- start --- && cd server && npm start",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run start"
   }
