--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
     "dotenv": "^5.0.1",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "jsforce": "^1.8.1",
     "jwt-simple": "^0.5.1",
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^5.0.0",
     "serve-favicon": "~2.4.5"
   }
