--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "start": "echo --- start --- && cd server && npm start",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run start"
+  },
+  "dependencies": {
+    "i": "^0.3.6",
+    "npm": "^5.8.0",
+    "react-search-box": "0.0.10"
   }
 }
