--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^5.0.0",
+    "react-search-box": "0.0.10",
     "serve-favicon": "~2.4.5"
   }
 }
